--- a/src/app/view/etudiants/etudiants.html
+++ b/src/app/view/etudiants/etudiants.html
@@ -10,3 +10,8 @@
 }@else {
     <h2 style="color: red; font-weight: bold;">Je ne suis pas en ISI 4</h2>
 }
+
+<p>Etudiants mineurs</p>
+<ul>
+    <li>{{list_students}}</li>
+</ul>
