Revision de l'architecture

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,8 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
-        <li><a href="contact" class="text-3xl font-bold underline">Contact</a></li>
+        <li><a href="contact" class="">Contact</a></li>
+        <li><button class="submit">Bouton</button></li>
       </ul>
     </nav>
   </header>
