Deplacement du dossier about vers la vue

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,16 +9,15 @@
 
 <main class="main">
   <header class="navbar">
-    <nav class="nav-links" aria-label="Main navigation">
+    <nav aria-label="Main navigation">
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
         <li><a href="contact" class="">Contact</a></li>
-        <li><button class="submit">Bouton</button></li>
       </ul>
     </nav>
   </header>
-     <div class="content">
+     <div class="">
       <a href="etudiants">Etudiants</a>
         <router-outlet />
     </div>
