--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,16 +7,10 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<header class="navbar">
+    <app-navbar />
+</header>
 <main class="main">
-  <header class="navbar">
-    <nav aria-label="Main navigation">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="contact" class="">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
      <div class="">
       <a href="etudiants">Etudiants</a>
         <router-outlet />
