--- a/src/app/view/navbar/navbar.html
+++ b/src/app/view/navbar/navbar.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<nav aria-label="Main navigation" >
+      <ul class="flex gap-4 justify-center gap-[12vh] bg-blue-800 p-4 font-sans md:font-serif text-2xl">
+        <li><a href="/">Home</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact" class="hover:underline hover:text-stone-50 rounded-sm">Contact</a></li>
+      </ul>
+</nav>
