--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,13 +11,11 @@
     <app-navbar />
 </header>
 <main class="main">
-     <div class="">
-      <a href="etudiants">Etudiants</a>
-        <router-outlet />
+     <div class="flex justify-center  p-4">
+      <a href="etudiants" class="text-2xl hover:text-stone-50 hover:bg-blue-700 rounded-lg p-[4px]">Liste des etudiants</a>
     </div>
-    <footer class="footer">
-      <a href="footer">Footer</a>
-    </footer>
+    <router-outlet />
+    <app-footer />
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
