--- a/src/app/view/navbar/navbar.html
+++ b/src/app/view/navbar/navbar.html
@@ -1,7 +1,8 @@
-<nav aria-label="Main navigation" >
-      <ul class="flex gap-4 justify-center gap-[12vh] bg-blue-800 p-4 font-sans md:font-serif text-2xl">
+<nav aria-label="Main navigation" class="w-full bg-blue-700 flex justify-around items-center">
+      <ul class="flex gap-4 justify-center gap-[12vh]  p-4 font-sans md:font-serif text-2xl">
         <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
         <li><a href="contact" class="hover:underline hover:text-stone-50 rounded-sm">Contact</a></li>
       </ul>
+      <input type="text" placeholder="Rechercher..." class="border hover:bg-gray-200 border-gray-300 rounded-md p-2 m-4 w-1/3"/>
 </nav>
