--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,7 +10,7 @@
 <header class="navbar">
     <app-navbar />
 </header>
-<main class="main">
+<main class="main scroll-smooth">
      <div class="flex justify-center  p-4">
       <a href="etudiants" class="text-2xl hover:text-stone-50 hover:bg-blue-700 rounded-lg p-[4px]">Liste des etudiants</a>
     </div>
