--- a/src/app/view/navbar/navbar.html
+++ b/src/app/view/navbar/navbar.html
@@ -1,10 +1,10 @@
-<nav aria-label="Main navigation" class="flex bg-blue-700 p-4 w-full justify-center items-center">
-  <div class="flex justify-between items-center bg-gray-200 rounded-[20vh] w-[90%]">
-      <ul class="flex justify-center gap-[12vh]  p-4 text-2xl">
-        <li class="p-2 bg-blue-700 rounded-[18vh]"><a href="/">Home</a></li>
+<nav aria-label="Main navigation" class="flex p-4 w-full justify-center inset-x-0 top-0 lg:px-8 items-center">
+  <div class="flex justify-between items-center bg-blue-700 rounded-[20vh] w-[90%] drop-shadow-[4px_8px_8px_rgba(0,0,0,0.25)]">
+      <ul class="flex justify-center gap-[12vh] z-2 p-4 text-2xl">
+        <li class="p-2 hover:bg-gray-200 rounded-[18vh]"><a href="/">Home</a></li>
         <li class="p-2 rounded-[18vh]"><a href="about">About</a></li>
         <li class="p-2 rounded-[18vh]"><a href="contact" class="hover:underline hover:text-stone-50 rounded-sm">Contact</a></li>
       </ul>
-        <input type="text" placeholder="Rechercher..." class="border bg-blue-700 hover:bg-gray-200 border-gray-300 rounded-[18vh] p-2 m-4 w-1/4"/>
+        <input type="text" placeholder="Rechercher..." class="border hover:bg-blue-700 bg-gray-200 border-gray-300 rounded-[18vh] p-2 m-4 w-1/4"/>
   </div>
 </nav>
