--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,7 +12,7 @@
 </header>
 <main class="main scroll-smooth">
      <div class="flex justify-center  p-4">
-      <a href="etudiants" class="text-2xl hover:text-stone-50 hover:bg-blue-700 rounded-lg p-[4px]">Liste des etudiants</a>
+      <a href="etudiants" class="text-2xl hover:text-stone-50 hover:bg-blue-700 rounded-lg p-[4px] transition delay-50 duration-300 ease-in-out">Liste des etudiants</a>
     </div>
     <router-outlet />
     <app-footer />
