--- a/src/app/view/footer/footer.html
+++ b/src/app/view/footer/footer.html
@@ -1,3 +1,3 @@
-<div class="bg-blue-800 w-full text-[4vh] bottom-0 left-0 fixed ">
-    <p class="flex justify-center">&copy; 2024 FriandiseApp. All rights reserved.</p>
+<div class="bg-blue-700/80 w-full min-h-16 m-auto bottom-0 left-0 fixed ">
+    <p class="flex justify-center text-lg">&copy; 2024 FriandiseApp. All rights reserved.</p>
 </div>
