--- a/src/app/view/navbar/navbar.html
+++ b/src/app/view/navbar/navbar.html
@@ -1,12 +1,12 @@
 <nav aria-label="Main navigation" 
 class="flex p-4 w-full justify-center inset-x-0 top-0 lg:px-8 items-center backdrop-blur-md ">
-  <div class="relative flex justify-between items-center px-6 py-3 rounded-full shadow-lg overflow-hidden
+  <div class="relative flex justify-between items-center px-6 rounded-full shadow-lg overflow-hidden
             bg-blue-600/60 backdrop-blur-md border border-blue-200/20 w-full max-w-5xl">            
-      <ul class="flex justify-center gap-[12vh] z-2 p-4 text-2xl">
+      <ul class="flex justify-center gap-[12vh] p-4 text-2xl">
         <li class="p-2 bg-gray-200 rounded-[18vh]"><a href="/">Home</a></li>
         <li class="p-2 rounded-[18vh]"><a href="about" class="hover:underline hover:text-stone-50 rounded-sm">About</a></li>
         <li class="p-2 rounded-[18vh]"><a href="contact" class="hover:underline hover:text-stone-50 rounded-sm">Contact</a></li>
       </ul>
-        <input type="text" placeholder="Rechercher..." class="px-4 py-2 rounded-full bg-white/70 text-black placeholder-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-400"/>
+        <input type="text" placeholder="Rechercher..." class="px-6 py-2 rounded-full bg-white/70 text-black placeholder-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-400"/>
   </div>
 </nav>
