--- a/src/app/components/student/student.html
+++ b/src/app/components/student/student.html
@@ -1,1 +1,4 @@
-<p class="bg-sky-100 border-y">{{etu?.nom+' '+etu?.prenom}}</p>
+<div class="flex  min-h-16 w-full bg-blue-100 border-y justify-center items-center border-x-2 p-1 px-2">
+    <p class="flex-2/3 text-2xl">{{etu.nom}}</p>
+    <button (click)="computeMoyene()" class="bg-red-200 p-3 rounded-lg m-3 hover:bg-red-600 delay-100 transition ease-in-out hover:text-gray-50"> Moyenne </button>
+</div>
